# foundry-rs-compilers-issue47

./: Cargo.toml
src/: contract.sol  dependency.sol  main.rs
