[package]
name = "foundry-rs-compilers-issue47"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foundry-compilers = { git = "https://github.com/foundry-rs/compilers", features = ["svm-solc"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
